# astro-science-ppt

./: .copier-answers.yml  index.json  info.json  pyproject.toml  regressions.xml
_results/: benchmarks.json
_results/gh-runner/: 175cd944-virtualenv-py3.10-Cython-build-packaging.json  4afc9f26-virtualenv-py3.10-Cython-build-packaging.json  6b8ecd49-virtualenv-py3.10-Cython-build-packaging.json  cbeec4e7-virtualenv-py3.10-Cython-build-packaging.json
benchmarks/: asv.conf.json  benchmarks.py
docs/: index.rst  notebook.ipynb
graphs/summary/: benchmarks.peakmem_computation.json  benchmarks.time_computation.json
src/: example.py
tests/: test_example.py
